--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body> 
         <h1>Git Log Format</h1>
         <p>Step 1: Generate log command</p>
-        <p><b>Filter: </b></p>
+        <h3><b>Filter: </b></h3>
         <label for="from">From: </label>
         <input type="date" id ="from" oninput="generate()"/>
         <label for="to">To: </label>
@@ -31,7 +31,7 @@
         <input type="checkbox" id ="all" oninput="generate()"/>
         <label for="all">Show commits from all branches</label>
 
-        <p><b>Format: </b></p>
+        <h3><b>Format: </b></h3>
         <label>Include: </label>
         <input type="checkbox" id ="date" oninput="generate()"/>
         <label for="date">Date</label>
@@ -44,18 +44,23 @@
         <p></p>
         <label for="advanced">Advanced: </label>
         <input type="text" id ="advanced" placeholder="overrides options above" oninput="generate()"/>
-        <label for="advanced">(<a href="https://git-scm.com/docs/pretty-formats#:~:text=no%2Dabbrev.-,format%3A%3Cformat%2Dstring%3E,-The%20format%3A%3Cformat">docs</a>)</label>
+        <label for="advanced">(<a href="https://git-scm.com/docs/git-log#_options">docs</a>)</label>
         <p>(Leave all blank for default)</p>
-        
-        <p><b>Options: </b></p>
-        <input type="checkbox" id ="copy" oninput="generate()"/>
-        <label for="copy">Copy to clipboard on Windows</label>
-        <p><b>Output: </b></p>
-        <p id="command">Command will be shown here</p>
 
+        <h3><b>Options: </b></h3>
+        <label for="args">Arguments: </label>
+        <input type="text" id ="args" placeholder="other arguments" oninput="generate()"/>
+        <label for="args">(<a href="https://git-scm.com/docs/pretty-formats#:~:text=no%2Dabbrev.-,format%3A%3Cformat%2Dstring%3E,-The%20format%3A%3Cformat">docs</a>)</label>
+        <p></p>
+        <input type="checkbox" id ="copy" oninput="generate()"/>
+        <label for="copy">Auto copy log to clipboard on Windows</label>
+
+
+        <h3><b>Output: </b></h3>
+        <p title="Click to copy command" id="command" onclick="copy()">Command will be shown here. Click to copy.</p>
 
         <p>Step 2 (optional): Link hash to commit on remote repository</p>
-        <p>Enter path to view commit on remote repository (e.g. https://github.com/user/repo/commit)</p>
+        <p>Enter path to commit on remote repository (e.g. https://github.com/user/repo/commit)</p>
         <label for="url">URL: </label>
         <input type="url" id="url" />
         <p>Output from command generated above</p>
@@ -63,6 +68,7 @@
     </body>
 </html>
 <script>
+    let command = "Command will be shown here. Click to copy.";
     document.addEventListener("DOMContentLoaded", ()=>{
 
     });
@@ -106,10 +112,21 @@
         } else {
             output += " --format='" + document.getElementById("advanced").value + "'";
         }
+        output += " " + document.getElementById("args").value;
         if (document.getElementById("copy").checked) {
             output += " | clip";
         }
-        document.getElementById("command").innerHTML = output;
+        command = output;
+        document.getElementById("command").innerHTML = command;
+
+    }
+    function copy(){
+        let text = document.getElementById("command").innerHTML;
+        navigator.clipboard.writeText(text);
+        document.getElementById("command").style.color = "#39ff14";
+        setTimeout(()=>{
+            document.getElementById("command").style.color = "white";
+        }, 500);
 
     }
 
