--- a/index.html
+++ b/index.html
@@ -13,12 +13,21 @@
             font-family: monospace;
             padding: 1rem;
             width: fit-content;
+            overflow-wrap: anywhere;
         }
-        #formatted, #htmlcode{
+        #htmlcode{
             border: 1px black solid;
+        }
+        #formatted {
+
+            margin: 0px;
         }
         #loginput{
             width: 100%;
+        }
+        #code{
+            border: 1px black solid;
+            padding: none;
         }
     </style>
     <body> 
