fixed line wrapping in output

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         }
         #htmlcode{
             border: 1px black solid;
+            min-width: 100%;
+            width: fit-content;
         }
         #formatted {
-
             margin: 0px;
         }
         #loginput{
@@ -28,6 +29,8 @@
         #code{
             border: 1px black solid;
             padding: none;
+            width: fit-content;
+            min-width: 100%;
         }
     </style>
     <body> 
